
Key new features in {productName} {product-majorVersion} include:

* Support for both https://jakarta.ee/specifications/persistence/[Jakarta Persistence] entities and https://jakarta.ee/specifications/nosql/[Jakarta NoSQL] entities in xref:application-development-guide.adoc#using-jakarta-data-repositories[Jakarta Data repositories]
* Java 21+ minimum requirement with support up to JDK 25 (see xref:#required-jdk-versions[Required JDK Versions])
* MicroProfile APIs expanded to Web Profile and Embedded GlassFish (since {productName} 7.1.0) (see xref:#microprofile-support[MicroProfile Standards Support])
* Monitoring via JMX supported in Embedded {productName}
* Enhanced performance and stability improvements

{productName} {product-majorVersion} also supports the following features:

* https://microprofile.io/specifications/config/[MicroProfile Config]  API
* https://microprofile.io/specifications/jwt/[MicroProfile JWT] API
* https://microprofile.io/specifications/rest-client[MicroProfile REST Client] API (since {productName} 7.0.6)
* https://microprofile.io/specifications/health[MicroProfile Health] API (since {productName} 7.1.0)
* https://jakarta.ee/specifications/mvc/[Jakarta MVC] API updated to version 2.0
* xref:embedded-server-guide.adoc#running-from-command-line[Runnable Embedded GlassFish JAR] (since {productName} 7.0.18)
* xref:administration-guide.adoc#log-executed-admin-commands[Admin Command Logger] (since {productName} 7.0.16)
* https://github.com/eclipse-ee4j/glassfish/discussions/25343[SSH nodes on Windows] via the native Windows SSH service (since {productName} 7.0.23)

For a complete list of the Jakarta EE technologies included in {productName} {product-currentVersion},
see xref:#jakarta-ee-support[Jakarta EE Standards Support].

For a complete list of the MicroProfile technologies included in {productName} {product-currentVersion},
see xref:#microprofile-support[MicroProfile Standards Support].
