@@ -32,58 +32,58 @@ import static java.lang.annotation.RetentionPolicy.RUNTIME;
 /**
  * CDI qualifier for injecting the GlassFish built-in MicroProfile JWT
  * Jakarta Security Authentication mechanism.
- * 
+ *
  * <p>This qualifier allows direct injection of the GlassFish built-in MicroProfile JWT authentication mechanism.</p>
- * 
+ *
  * <h3>Basic Usage</h3>
  * <pre>{@code
  * @ApplicationScoped
  * public class SecurityService {
- *     
+ *
  *     @Inject
  *     @MicroProfileJwtAuthenticationMechanism
  *     private HttpAuthenticationMechanism jwtAuthMechanism;
- *     
+ *
  *     // Use the JWT authentication mechanism directly
  * }
  * }</pre>
- * 
+ *
  * <h3>Features</h3>
  * <ul>
  * <li><strong>Direct Access:</strong> Direct access to the GlassFish JWT authentication mechanism</li>
  * <li><strong>CDI Integration:</strong> Seamless integration with CDI dependency injection</li>
  * <li><strong>Type Safety:</strong> Uses the standard {@link jakarta.security.enterprise.authentication.mechanism.http.HttpAuthenticationMechanism} interface</li>
  * </ul>
- * 
+ *
  * <h3>Combining with Other Mechanisms</h3>
- * <p>The {@code @MicroProfileJwtAuthenticationMechanism} qualifier is complementary to the qualifiers for the standard Jakarta Security 
- * mechanisms like the Basic authentication mechanism. It can be combined with the other standard mechanisms 
+ * <p>The {@code @MicroProfileJwtAuthenticationMechanism} qualifier is complementary to the qualifiers for the standard Jakarta Security
+ * mechanisms like the Basic authentication mechanism. It can be combined with the other standard mechanisms
  * in the same {@code HttpAuthenticationMechanismHandler}.</p>
- * 
+ *
  * <pre>{@code
  * @ApplicationScoped
  * @Alternative
  * @Priority(Interceptor.Priority.APPLICATION)
  * public class CustomAuthenticationHandler implements HttpAuthenticationMechanismHandler {
- * 
+ *
  *     @Inject
  *     @MicroProfileJwtAuthenticationMechanism
  *     HttpAuthenticationMechanism jwtAuthentication;
- * 
+ *
  *     @Inject
  *     @BasicAuthenticationMechanismDefinition.BasicAuthenticationMechanism
  *     HttpAuthenticationMechanism basicAuthentication;
- * 
+ *
  *     @Override
- *     public AuthenticationStatus validateRequest(HttpServletRequest request, 
- *                                               HttpServletResponse response, 
- *                                               HttpMessageContext messageContext) 
+ *     public AuthenticationStatus validateRequest(HttpServletRequest request,
+ *                                               HttpServletResponse response,
+ *                                               HttpMessageContext messageContext)
  *                                               throws AuthenticationException {
  *         // delegate to one of the two mechanisms
  *     }
  * }
  * }</pre>
- * 
+ *
  * @since GlassFish 8.0
  * @see jakarta.security.enterprise.authentication.mechanism.http.HttpAuthenticationMechanism
  * @see org.eclipse.microprofile.jwt.JsonWebToken
@@ -93,9 +93,16 @@ import static java.lang.annotation.RetentionPolicy.RUNTIME;
 @Target({TYPE, METHOD, FIELD, PARAMETER})
 @Documented
 public @interface MicroProfileJwtAuthenticationMechanism {
-    
-    public static final class Literal extends AnnotationLiteral<MicroProfileJwtAuthenticationMechanism> 
+
+    /**
+     * Literal implementation for programmatic use.
+     */
+    final class Literal extends AnnotationLiteral<MicroProfileJwtAuthenticationMechanism>
             implements MicroProfileJwtAuthenticationMechanism {
+
+        /**
+         * Singleton instance of the literal.
+         */
         public static final Literal INSTANCE = new Literal();
     }
 }
